--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -146,11 +146,11 @@ The *_Architecture Diagram_* given above explains the high-level design of the A
 quick overview of each component.
 
 [TIP]
-The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
-Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
+The files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and
-link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+
+`Main` has two classes called link:{repoURL}/src/main/java/seedu/system/Main.java[`Main`] and
+link:{repoURL}/src/main/java/seedu/system/MainApp.java[`MainApp`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -172,7 +172,8 @@ Each of the four components
 * Defines its _API_ in an `interface` with the same name as the Component.
 * Exposes its functionality using a `{Component Name}Manager` class.
 
-For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java` interface and exposes its functionality using the `LogicManager.java` class.
+For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java` interface
+and exposes its functionality using the `LogicManager.java` class.
 
 .Class Diagram of the Logic Component
 image::LogicClassDiagram.png[]
@@ -193,11 +194,16 @@ The sections below give more details of each component.
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/src/main/java/seedu/system/ui/Ui.java[`Ui.java`]
 
-The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `PersonListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
+The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `PersonListPanel`,
+ `CompetitionListPanel`, `ParticipationListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`,
+inherit from the abstract `UiPart` class.
 
-The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
+The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that
+are in the `src/main/resources/view` folder. For example, the layout of the
+link:{repoURL}/src/main/java/seedu/system/ui/MainWindow.java[`MainWindow`] is specified in
+link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
 
 The `UI` component,
 
@@ -212,7 +218,7 @@ The `UI` component,
 image::LogicClassDiagram.png[]
 
 *API* :
-link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/seedu/system/logic/Logic.java[`Logic.java`]
 
 .  `Logic` uses the `SystemParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
@@ -228,24 +234,23 @@ image::DeleteSequenceDiagram.png[]
 NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
 [[Design-Model]]
-=== Model component (needs to change)
+=== Model component
 
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/seedu/system/model/Model.java[`Model.java`]
 
 The `Model`,
 
 * stores a `UserPref` object that represents the user's preferences.
-* stores the Address Book data.
-* exposes an unmodifiable `ObservableList<Person>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
+* stores the System data.
+* exposes unmodifiable `ObservableList<Person>`, `ObservableList<Competition>` and `ObservableList<Participation>`
+that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the
+data in the list change.
+* exposes a Session class to handle the context switching between in and out of competition sessions.
 * does not depend on any of the other three components.
 
-[NOTE]
-As a more OOP model, we can store a `Tag` list in `Address Book`, which `Person` can reference. This would allow `Address Book` to only require one `Tag` object per unique `Tag`, instead of each `Person` needing their own `Tag` object. An example of how such a model may look like is given below. +
- +
-image:BetterModelClassDiagram.png[]
 
 [[Design-Storage]]
 === Storage component
@@ -253,12 +258,12 @@ image:BetterModelClassDiagram.png[]
 .Structure of the Storage Component
 image::StorageClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/storage/Storage.java[`Storage.java`]
+*API* : link:{repoURL}/src/main/java/seedu/system/storage/Storage.java[`Storage.java`]
 
 The `Storage` component,
 
 * can save `UserPref` objects in json format and read it back.
-* can save the Address Book data in json format and read it back.
+* can save the `Person`, `Competition`, `Participation` data in json format and read it back.
 
 
 == Implementation
@@ -287,7 +292,14 @@ However, the end of every competition session does not signify the end of a user
 The user can still go in and out of the competition session (start and end), to perform the different commands
 from the different states.
 
-==== How it is being implemented (mingsheng)
+
+==== How it is being implemented
+
+This is done using an instance of the Session class, which is exposed from the model manager.
+The session has a competition field to indicate the current competition that is ongoing during the session.
+If there is no competition set in the session, then there is no ongoing session. Using this simple
+but highly effective method, we are able to use very simple logic to achieve the necessary context-switching behaviour
+described in the above diagram.
 
 === In-Session
 In-Session is the state where the user enters competition mode, where users can command the app to generate
@@ -407,7 +419,44 @@ we decide to apply the Command Design Pattern for the Rank command too.
 
 //end::Rank[]
 
-==== Rank list feature
+
+==== Ranklist feature
+A RanklistCommand class is created to facilitate ranking of all the participants for a given competition that is
+currently ongoing (i.e. in-session). The ranking can be altered depending on the ranking method chosen by the user.
+This provides the user a variety of ranking methods to suit the user's need during a powerlifting competition.
+Typically, a powerlifting competition usually provides rankings for their participants based either on their overall
+score or the maximum weight lifted for a particular lift.
+
+===== Implementation
+RankCommand extends the Command Abstract Class, the rationale is explained in `Choice of Design Pattern`
+sub-section of the Ranklist feature.
+
+Rank feature has 1 check:
+1. Checks if a competition session is ongoing, Ranklist command can only be used if a competition session
+is currently ongoing.
+
+Finally, the feature returns a listing of the athletes based on the ranking method provided. For example,
+
+ Ranking of athletes by overall score in competition NUS Powerlifting Open 2019:
+1. Alex Yeoh (Score: 100)
+2. Bernice Yu (Score: 97)
+3. Charlotte Oliveiro (Score: 2)
+
+When the Ranklist feature is used, RanklistCommand interacts with other classes to return a participant's score for
+a given ranking method before sorting the list and displaying it on the screen as seen above. Please refer to the
+sequence diagram for a high level depiction of how RanklistCommand interacts with other classes.
+
+.Sequence Diagram of the RanklistCommand
+image::RanklistCommand.png[]
+
+===== Choice of Design Pattern
+Original AB3 code base uses a Command Design Pattern, which facilitates execution of different commands,
+without the programme knowing which type of command is being executed. Furthermore, the original AB3 code base achieves
+a Command Design Pattern by requiring different types of command classes to extend from a Command Abstract Class.
+
+Due to time constraint and to achieve consistency with the Command Design Pattern of the original Code Base,
+we decide to apply the Command Design Pattern for the Ranklist command too.
+
 
 ==== End session feature
 This feature ends the session, and shifts the user back to the out-session state.
@@ -615,7 +664,25 @@ Cons:
 
 
 ==== Overall Rank feature
+The user can list the persons in the system by the number of times they won a competition.
 
+Format: `overallRank`
+
+Due to time limitations we have not allowed the user to specify any other ranking method but given
+the design of our system which is highly extensible, it would not be hard to do so in future
+versions.
+
+Pros:
+
+* Takes in no parameters so user will make minimal mistakes.
+
+* Avoid complications between unmatched name and person.
+
+* Easy to implement.
+
+Cons:
+
+* User will have to scroll through the person list if it is very long to find a specific name.
 
 == Documentation
 
