--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -507,7 +507,7 @@ The following are a few design considerations made in deciding how to implement 
 // tag::reminder[]
 === Reminder feature
 ==== Implementation
-A bookmark can have a reminder, and a reminder can be used to open the bookmark.
+A bookmark can attach a reminder, and a reminder can be used to open the bookmark and send notifications to the user.
 This mechanism is facilitated by `Reminder` and `ReminderAssociation`.
 
 `Reminder` contains a reminding time, the `Url` of the `Bookmark` and a `Note`.
@@ -515,8 +515,38 @@ This mechanism is facilitated by `Reminder` and `ReminderAssociation`.
 `ReminderAssociation` represents the association between `Reminder` and `Bookmark`, containing
  the relation from `Reminder` to `Bookmark` and `Reminder` to `Bookmark`.
 
-.Structure of the Reminder
+.Class diagram of the Reminder component
 image::ReminderAssociationDiagram.png[]
+
+There are four parts of the reminder feature:
+
+* Add a reminder to a specific bookmark (executed by `AddReminderCommand#execute()`)
+* Edit a reminder (executed by `EditReminderCommand#execute()`)
+* Delete a reminder (executed by `DeleteReminderCommand#execute()`)
+* Goto the bookmark of a specific reminder (executed by `GotoReminderCommand#execute()`)
+
+These command are triggered by `reminder` command line entered into the command box,
+which will calls the respective command parser to create the command.
+The bookmark of the reminder will be retrieved and handled according to the command.
+
+The following sequence diagram illustrates how the adding reminder operation works:
+
+image::AddReminderSequenceDiagram.png[]
+
+NOTE: The lifeline for `AddReminderCommandParser` and `AddReminderCommand` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
+
+In the `reminder-delete` command, instead of calling `addReminder(bookmark, reminder)` in Model,
+it will call `removeReminder(reminder)`.
+
+In the `reminder-edit` command, instead of calling `addReminder(bookmark, reminder)` in Model,
+EditReminderCommand will create a edited copy of the target reminder and call `editReminder(target, editedReminder)` in Model.
+
+In the `reminder-goto` command, it will retrieved the bookmark of the reminder and generate a GotoCommandResult.
+It works the same as `goto` command of the bookmark.
+
+The following activity diagram summarizes what happens when a user attempts to use a reminder command:
+
+image::ReminderActivityDiagram.png[]
 
 ==== Design Considerations
 ===== Aspect: How to represent the relationship between reminder and bookmark
@@ -647,8 +677,6 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 |`* *` |user |check my view history |see what websites I have visited
 
 |`* *` |user |automatically clean up old or outdated bookmarks |keep my bookmark list up to date without having to look through it regularly
-
-|`* *` |user |sort the bookmarks according to name |locate a specific bookmark
 
 |`*` |user |export and import autotags |share my custom-made autotags with friends
 |=======================================================================
@@ -976,6 +1004,7 @@ Use case resumes from step 4.
 +
 Use case resumes from step 4.
 
+//tag::use-case-reminder[]
 [[UC14]]
 [discrete]
 === Use case: UC14 - Add a reminder
@@ -1068,27 +1097,25 @@ Use case resumes at step 1.
 
 [[UC17]]
 [discrete]
-=== Use case: UC17 - Sort the bookmark list
+=== Use case: UC17 - Open reminder
 
 *MSS*
 
-1. User <<UC01, lists bookmarks (UC01)>>.
-2. User requests to sort the list in the specified criterion.
-3. Mark shows the sorted bookmark list.
+1.  User requests to open a specific reminder in the reminder list.
+2.  Mark opens the reminder.
 +
 Use case ends.
 
 *Extensions*
+
 [none]
-* 1a. The list is empty.
+* 1a. The given index is invalid.
 +
-Use case ends.
 [none]
-* 2a. Mark detects invalid criterion.
-[none]
-** 2a1. Mark shows an error message.
+** 1a1. Mark shows an error message.
 +
 Use case resumes at step 1.
+//end::use-case-reminder[]
 
 [appendix]
 == Non Functional Requirements
