--- a/docs/team/TSAI-HSIAO-HAN.adoc
+++ b/docs/team/TSAI-HSIAO-HAN.adoc
@@ -69,8 +69,6 @@ include::../UserGuide.adoc[tag=ReminderCommand]
 
 include::../UserGuide.adoc[tag=sort]
 
-//include::../UserGuide.adoc[tag=reminder]
-
 == Contributions to the Developer Guide
 
 |===
@@ -78,6 +76,8 @@ include::../UserGuide.adoc[tag=sort]
 |===
 
 include::../DeveloperGuide.adoc[tag=reminder]
+
+include::../DeveloperGuide.adoc[tag=use-case-reminder]
 
 
 
